feat: :sparkles: Add support to use hero dice to decrease roll results

--- a/lang/en.json
+++ b/lang/en.json
@@ -261,6 +261,7 @@
   "SDM.BiomagicalCorruption": "Biomagical Corruption",
   "SDM.BlindRoll": "Blind GM",
   "SDM.BonusHeroDice": "Bonus Hero Dice",
+  "SDM.BonusHeroDicePool": "Bonus Hero Dice pool",
   "SDM.brick-bastions": "Brick Bastions",
   "SDM.BrokenItemAction": "<b>right-click</b>: repair item back to notched",
   "SDM.BurdensPenalty": "Each burden imposes a -1 to all rolls",
@@ -383,10 +384,19 @@
   "SDM.ErrorInvalidTarget": "Invalid target actor",
   "SDM.ErrorMaxPowers": "Cannot store more powers in {item}",
   "SDM.ErrorMissingDamageFormula": "Item doesn't have configured damage roll formula",
+  "SDM.ErrorNoActiveGM": "No active Referee available.",
   "SDM.ErrorNoActorSelected": "No valid {type} was selected!",
   "SDM.ErrorNoHeroDice": "No Hero Dice available!",
   "SDM.ErrorNoMoney": "{target} doesn't have any money!",
   "SDM.ErrorNotEnoughMoney": "{target} doesn't have enough money!",
+  "SDM.ErrorSettingInvalidScope": "Invalid setting scope.",
+  "SDM.ErrorSettingNotAllowed": "You are not allowed to change this setting.",
+  "SDM.ErrorSettingNotNumber": "Value must be a number.",
+  "SDM.ErrorSettingOutOfRange": "Value is out of range.",
+  "SDM.ErrorSettingRequiresReload": "This setting requires a world reload.",
+  "SDM.ErrorSettingUnknown": "Unknown setting.",
+  "SDM.ErrorSettingUpdateFailedGeneric": "Failed to update setting.",
+  "SDM.ErrorTooManyRequests": "Too many requests in a short time.",
   "SDM.ErrorTransferAlreadyInProgress": "Item {name} is already being transferred",
   "SDM.ErrorTransferAmountNotPositive": "Amount must be a positive number",
   "SDM.ErrorTransferExcessCashAmount": "Cannot transfer more cash than available",
@@ -481,7 +491,11 @@
   "SDM.HallmarkItem": "Hallmark",
   "SDM.HealingHouseRule": "Healing House Rule",
   "SDM.HeroDice": "hero dice",
-  "SDM.HeroDiceHealingTip": "<b>Left-click</b>: roll Hero Dice for healing<br><b>Right-click</b>: spend Hero Dice without rolling",
+  "SDM.HeroDiceHealingTip": "<b>Left-click</b>: roll Hero Dice for healing<br><b>Right-click</b>: add Hero Dice to a shared Bonus Pool",
+  "SDM.HeroDiceMode": "Hero Dice Mode",
+  "SDM.HeroDiceModeDecrease": "Decrease (suppress roll result)",
+  "SDM.HeroDiceModeHint": "Choose whether hero dice should raise or lower a roll result. Decrease will floor dice at 1 and never generate extra exploding dice.",
+  "SDM.HeroDiceModeIncrease": "Increase (boost roll result)",
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
   "SDM.HeroDie": "hero die",
   "SDM.humans-of-the-pananthropy": " Humans of the Pananthropy",
@@ -704,6 +718,8 @@
   "SDM.SettingsSkillModifierStepHint": "Changes the bonus amount given in a roll by each skill rank",
   "SDM.SettingsUseHardLimitRule": "Optional Hard Limit Rule",
   "SDM.SettingsUseHardLimitRuleHint": "Enables a hard limit on bonuses applied to d20 rolls",
+  "SDM.SettingUpdated": "{key} updated to {value}.",
+  "SDM.SettingUpdatedBroadcast": "{key} is now {value}.",
   "SDM.SheetActor": "SDM Actor Sheet",
   "SDM.SheetEditMode": "Edit Mode",
   "SDM.SheetItem": "SDM Item Sheet",
@@ -783,7 +799,7 @@
   "SDM.WeaponVersatile": "Versatile",
   "SDM.WeaponVersatileDamage": "Versatile Damage",
   "SDM.Wiki": "Wiki",
-  "SDM.WithoutRollingDice": "Without Rolling!",
+  "SDM.WithoutRollingDice": "to increase Bonus Hero Dice Pool",
   "SDM.XPToGive": "XP to Give",
   "SMD.ErrorHallmarkExperience": "Hallmark item has invested experience",
   "TYPE.Burden": "Burden",
