--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -260,7 +260,8 @@
   "SDM.BackgroundTraitCreated": "Traço de antecedente {flavor} {role} criado para o personagem {name}!",
   "SDM.BiomagicalCorruption": "Corrupção Biomágica",
   "SDM.BlindRoll": "Cega pro Mestre",
-  "SDM.BonusHeroDice": "Dados Heróicos Bonus",
+  "SDM.BonusHeroDice": "Dados Heróicos Bônus",
+  "SDM.BonusHeroDicePool": "Parada Bônus de Dados Heróicos",
   "SDM.brick-bastions": "Bastiões de Tijolo",
   "SDM.BrokenItemAction": "<b>clique-direito</b>: reparar item para o estado danificado",
   "SDM.BurdensPenalty": "Cada fardo penaliza todas as rolagens em -1",
@@ -383,10 +384,19 @@
   "SDM.ErrorInvalidTarget": "Alvo inválido",
   "SDM.ErrorMaxPowers": "Não é possível armazenar mais poderes em {item}",
   "SDM.ErrorMissingDamageFormula": "Item não possui fórmula de dano configurada",
+  "SDM.ErrorNoActiveGM": "Nenhum Mediador online no momento.",
   "SDM.ErrorNoActorSelected": "Nenhum {type} válido selecionado!",
   "SDM.ErrorNoHeroDice": "Nenhum Dado Heróico disponível!",
   "SDM.ErrorNoMoney": "{target} não possui dinheiro!",
   "SDM.ErrorNotEnoughMoney": "{target} não tem dinheiro suficiente!",
+  "SDM.ErrorSettingInvalidScope": "Escopo de configuração inválido.",
+  "SDM.ErrorSettingNotAllowed": "Você não tem permissão para alterar esta configuração.",
+  "SDM.ErrorSettingNotNumber": "O valor deve ser um número.",
+  "SDM.ErrorSettingOutOfRange": "O valor está fora do intervalo permitido.",
+  "SDM.ErrorSettingRequiresReload": "Esta configuração requer recarregar o mundo.",
+  "SDM.ErrorSettingUnknown": "Configuração desconhecida.",
+  "SDM.ErrorSettingUpdateFailedGeneric": "Falha ao atualizar configuração.",
+  "SDM.ErrorTooManyRequests": "Muitas solicitações em pouco tempo.",
   "SDM.ErrorTransferAlreadyInProgress": "Item {name} já está sendo transferido",
   "SDM.ErrorTransferAmountNotPositive": "Quantidade deve ser um número positivo",
   "SDM.ErrorTransferExcessCashAmount": "Não é possível transferir mais dinheiro que o disponível",
@@ -481,7 +491,11 @@
   "SDM.HallmarkItem": "Emblemático",
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HeroDice": "dados heróicos",
-  "SDM.HeroDiceHealingTip": "<b>clique-esquerdo</b>: role dados heróicos para se curar<br><b>clique-direito</b>: gaste dados heróicos sem rolagem",
+  "SDM.HeroDiceHealingTip": "<b>clique-esquerdo</b>: role dados heróicos para se curar<br><b>clique-direito</b>: adiciona dados heróicos em uma parada bônus compartilhada",
+  "SDM.HeroDiceMode": "Modo de Dados Heroicos",
+  "SDM.HeroDiceModeDecrease": "Diminuir (reduz resultado da rolagem)",
+  "SDM.HeroDiceModeHint": "Escolha se os Dados Heroicos devem aumentar ou diminuir a rolagem anterior. Diminuir fixa o dado em 1 e nunca explode.",
+  "SDM.HeroDiceModeIncrease": "Aumentar (impulsiona resultado da rolagem)",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
   "SDM.HeroDie": "dado heróico",
   "SDM.humans-of-the-pananthropy": "Humanos da Panantrópia",
@@ -704,6 +718,8 @@
   "SDM.SettingsSkillModifierStepHint": "Muda o incremento padrão de bonus para cada ranque de uma perícia",
   "SDM.SettingsUseHardLimitRule": "Regra Opcional de Limite Máximo",
   "SDM.SettingsUseHardLimitRuleHint": "Ativa o limite máximo nos bônus aplicados a rolagens de d20",
+  "SDM.SettingUpdated": "{key} atualizado para {value}.",
+  "SDM.SettingUpdatedBroadcast": "{key} agora é {value}.",
   "SDM.SheetActor": "Ficha de Ator SDM",
   "SDM.SheetEditMode": "Modo de Edição",
   "SDM.SheetItem": "Ficha de Item SDM",
@@ -783,7 +799,7 @@
   "SDM.WeaponVersatile": "Versátil",
   "SDM.WeaponVersatileDamage": "Dano versátil",
   "SDM.Wiki": "Wiki",
-  "SDM.WithoutRollingDice": "Sem Rolagem!",
+  "SDM.WithoutRollingDice": "para aumentar a parada bônus de Dados Heróicos",
   "SDM.XPToGive": "EXP para Distribuir",
   "SMD.ErrorHallmarkExperience": "Este item emblemático possui experiência investida",
   "TYPE.Burden": "Fardo",
