fix: :globe_with_meridians: Fix pt-BR i18n labels related to hero dice modes

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -492,10 +492,10 @@
   "SDM.HealingHouseRule": "Regra de Cura",
   "SDM.HeroDice": "dados heróicos",
   "SDM.HeroDiceHealingTip": "<b>clique-esquerdo</b>: role dados heróicos para se curar<br><b>clique-direito</b>: adiciona dados heróicos em uma parada bônus compartilhada",
-  "SDM.HeroDiceMode": "Modo de Dados Heroicos",
+  "SDM.HeroDiceMode": "Modo dos Dados Heróicos",
   "SDM.HeroDiceModeDecrease": "Diminuir (reduz resultado da rolagem)",
-  "SDM.HeroDiceModeHint": "Escolha se os Dados Heroicos devem aumentar ou diminuir a rolagem anterior. Diminuir fixa o dado em 1 e nunca explode.",
-  "SDM.HeroDiceModeIncrease": "Aumentar (impulsiona resultado da rolagem)",
+  "SDM.HeroDiceModeHint": "Escolha se os Dados Heróicos devem aumentar ou diminuir a rolagem que irá modificar. Diminuir fixa o valor mínimo de um dado em 1 e nunca gera novas explosões.",
+  "SDM.HeroDiceModeIncrease": "Aumentar (incrementa o resultado da rolagem)",
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
   "SDM.HeroDie": "dado heróico",
   "SDM.humans-of-the-pananthropy": "Humanos da Panantrópia",
