feat: :sparkles: Improved hero dice test coverage

--- a/lang/en.json
+++ b/lang/en.json
@@ -680,7 +680,7 @@
   "SDM.SettingsBaseTraitSlots": "Base Trait Slots",
   "SDM.SettingsBaseTraitSlotsHint": "Base number of trait slots for a character",
   "SDM.SettingsChromatype": "Chromatype",
-  "SDM.SettingsChromatypeHint": "Pick your chromatype in the light of the polychrom! (change UI highlight color)\nCheck Dice So Nice: 3D Dice Settings for a \"SDM Chromatype Dice\" theme",
+  "SDM.SettingsChromatypeHint": "Pick your chromatype in the light of the polychrome! (change UI highlight color)\nCheck Dice So Nice: 3D Dice Settings for a \"SDM Chromatype Dice\" theme",
   "SDM.SettingsCurrencyImg": "Currency image",
   "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' Referee Macro",
   "SDM.SettingsCurrencyName": "Currency name",
