feat: :sparkles: Add support to mark item resources as running low and run out

--- a/lang/en.json
+++ b/lang/en.json
@@ -508,7 +508,10 @@
   "SDM.Item.Broken": "Mark as Broken",
   "SDM.Item.Delete": "Delete",
   "SDM.Item.Notched": "Mark as Notched",
+  "SDM.Item.Recharge": "Recharge",
   "SDM.Item.Repair": "Repair",
+  "SDM.Item.RunningLow": "Mark as Running Low",
+  "SDM.Item.RunOut": "Mark as Run Out",
   "SDM.Item.Share": "Share",
   "SDM.Item.Unpack": "Unpack Item",
   "SDM.Item.View": "View",
@@ -530,6 +533,8 @@
   "SDM.ItemStatusBroken": "broken",
   "SDM.ItemStatusNormal": "intact",
   "SDM.ItemStatusNotched": "notched",
+  "SDM.ItemStatusRunningLow": "Running Low",
+  "SDM.ItemStatusRunOut": "Run Out",
   "SDM.ItemTabAlbum": "Album",
   "SDM.ItemTabAttributes": "Attributes",
   "SDM.ItemTabDescription": "Description",
@@ -699,6 +704,8 @@
   "SDM.SettingsEscalatorDieHint": "Every roll will be increased by this amount",
   "SDM.SettingsExtendedSkillRanks": "Use extra skill ranks",
   "SDM.SettingsExtendedSkillRanksHint": "Enables a 4th and a 5th skill rank options",
+  "SDM.SettingsGroupPlayersToFriendlyTokens": "Group Players with Friendly Tokens on Group Initiative",
+  "SDM.SettingsGroupPlayersToFriendlyTokensHint": "When enabled, players are grouped together with friendly tokens.",
   "SDM.SettingsHealingHouseRule": "Healing House Rule",
   "SDM.SettingsHealingHouseRuleHint": "Roll hero dice twice and keep the highest result",
   "SDM.SettingsInitiativeFormula": "Initiative Formula",
@@ -708,6 +715,8 @@
   "SDM.SettingsLevelUpSoundFxHint": "Changes the sound effect played on character level up",
   "SDM.SettingsNPCInitiativeFormula": "NPC Initiative Formula",
   "SDM.SettingsNPCInitiativeFormulaHint": "Default initiative formula for NPCs",
+  "SDM.SettingsRerollInitiativeEveryRound": "Reroll Group Initiatives Every Round",
+  "SDM.SettingsRerollInitiativeEveryRoundHint": "When enabled, it will reroll group initiatives every new round.",
   "SDM.SettingsReverseShiftKey": "Reverse Shift Key",
   "SDM.SettingsReverseShiftKeyHint": "Reverse Shift+Click behavior in roll buttons.\nWhen enabled, using Shift+Click will be required to open custom roll dialogs.",
   "SDM.SettingsSavingThrowBaseRollFormula": "Base saving throw roll formula",
