--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -508,7 +508,10 @@
   "SDM.Item.Broken": "Marcar como Quebrado",
   "SDM.Item.Delete": "Excluir",
   "SDM.Item.Notched": "Marcar como Danificado",
+  "SDM.Item.Recharge": "Recarregar",
   "SDM.Item.Repair": "Reparar",
+  "SDM.Item.RunningLow": "Marcar recursos como Acabando",
+  "SDM.Item.RunOut": "Marcar recursos como Esgotado",
   "SDM.Item.Share": "Compartilhar",
   "SDM.Item.Unpack": "Desempacotar Item",
   "SDM.Item.View": "Visualizar",
@@ -530,6 +533,8 @@
   "SDM.ItemStatusBroken": "quebrado",
   "SDM.ItemStatusNormal": "Item está intacto",
   "SDM.ItemStatusNotched": "danificado",
+  "SDM.ItemStatusRunningLow": "Acabando",
+  "SDM.ItemStatusRunOut": "Esgotado",
   "SDM.ItemTabAlbum": "Álbum",
   "SDM.ItemTabAttributes": "Atributos",
   "SDM.ItemTabDescription": "Descrição",
@@ -699,6 +704,8 @@
   "SDM.SettingsEscalatorDieHint": "Bônus aplicado a todas as rolagens",
   "SDM.SettingsExtendedSkillRanks": "Usar ranques extras de perícias",
   "SDM.SettingsExtendedSkillRanksHint": "Habilita um quarto e quinto ranque para perícias",
+  "SDM.SettingsGroupPlayersToFriendlyTokens": "Agrupar Jogadores com Tokens Amigáveis em Initiativas em Grupo",
+  "SDM.SettingsGroupPlayersToFriendlyTokensHint": "Quando ativado, jogadores são agrupados junto com tokens amigáveis.",
   "SDM.SettingsHealingHouseRule": "Regra da Casa para Cura",
   "SDM.SettingsHealingHouseRuleHint": "Role dados heróicos duas vezes e mantenha o maior resultado",
   "SDM.SettingsInitiativeFormula": "Rolagem de Iniciativa",
@@ -708,6 +715,8 @@
   "SDM.SettingsLevelUpSoundFxHint": "Muda o efeito sonoro reproduzido ao subir de nível",
   "SDM.SettingsNPCInitiativeFormula": "Rolagem de Iniciativa para NPCs",
   "SDM.SettingsNPCInitiativeFormulaHint": "Rolagem padrão de Initiativa para NPCs",
+  "SDM.SettingsRerollInitiativeEveryRound": "Rerrolar Iniciativas dos Grupos a Cada Rodada",
+  "SDM.SettingsRerollInitiativeEveryRoundHint": "Quando ativado, a iniciativa de grupo será rerrolada a cada nova rodada.",
   "SDM.SettingsReverseShiftKey": "Tecla Shift reversa",
   "SDM.SettingsReverseShiftKeyHint": "Reverte o funcionamento da tecla Shift em botões de rolagem.\n Marcar esta opção exigirá Shift+click para abrir diálogos de rolagem personalizados",
   "SDM.SettingsSavingThrowBaseRollFormula": "Fórmula base para Salvaguardas",
