--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -743,6 +743,8 @@
   "SDM.SkillModifierStep": "Incremento por Nível",
   "SDM.SkillPhylake": "Guardião",
   "SDM.SkillSkilled": "Treinado",
+  "SDM.Sources": "Fontes",
+  "SDM.SourcesToLearn": "Fontes para Aprender",
   "SDM.SpeedFast": "Rápido",
   "SDM.SpeedSlow": "Lento",
   "SDM.SpeedStandard": "Normal",
