feat: :truck: Move all system settings to submenus

--- a/lang/en.json
+++ b/lang/en.json
@@ -544,6 +544,30 @@
   "SDM.ItemWard": "Ward",
   "SDM.Magitech": "Magitech",
   "SDM.ManageHeroDice": "Adjust Hero Dice",
+  "SDM.Menu.AudioGM.Hint": "",
+  "SDM.Menu.AudioGM.Label": "Configure Audio Settings",
+  "SDM.Menu.AudioGM.Name": "Audio Settings",
+  "SDM.Menu.Baselines.Hint": "",
+  "SDM.Menu.Baselines.Label": "Configure Baseline Settings",
+  "SDM.Menu.Baselines.Name": "Baseline Settings",
+  "SDM.Menu.Client.Hint": "Client specific settings like UI color and Shift+Click shortcut",
+  "SDM.Menu.Client.Label": "Configure Client Settings",
+  "SDM.Menu.Client.Name": "Client Settings",
+  "SDM.Menu.Combat.Hint": "",
+  "SDM.Menu.Combat.Label": "Configure Encounter Settings",
+  "SDM.Menu.Combat.Name": "Encounter Settings",
+  "SDM.Menu.CoreRules.Hint": "",
+  "SDM.Menu.CoreRules.Label": "Configure Rules Settings",
+  "SDM.Menu.CoreRules.Name": "Core Rules Settings",
+  "SDM.Menu.Economy.Hint": "",
+  "SDM.Menu.Economy.Label": "Configure Money Settings",
+  "SDM.Menu.Economy.Name": "Money Settings",
+  "SDM.Menu.NPC.Hint": "",
+  "SDM.Menu.NPC.Label": "Configure NPC Settings",
+  "SDM.Menu.NPC.Name": "NPC Related Settings",
+  "SDM.Menu.Skills.Hint": "",
+  "SDM.Menu.Skills.Label": "Configure Skills Settings",
+  "SDM.Menu.Skills.Name": "Skills Settings",
   "SDM.MessageCritical": "Critical hit!",
   "SDM.MessageDamage": "Deals {damage} damage!",
   "SDM.MessageNoChanges": "No changes were needed",
@@ -685,7 +709,7 @@
   "SDM.SettingsBaseTraitSlots": "Base Trait Slots",
   "SDM.SettingsBaseTraitSlotsHint": "Base number of trait slots for a character",
   "SDM.SettingsChromatype": "Chromatype",
-  "SDM.SettingsChromatypeHint": "Pick your chromatype in the light of the polychrome! (change UI highlight color)\nCheck Dice So Nice: 3D Dice Settings for a \"SDM Chromatype Dice\" theme",
+  "SDM.SettingsChromatypeHint": "Pick your chromatype in the light of the polychrome UI! (change UI highlight color)<br>Check Dice So Nice: 3D Dice Settings for a \"SDM Chromatype Dice\" theme",
   "SDM.SettingsCurrencyImg": "Currency image",
   "SDM.SettingsCurrencyImgHint": "Default image for new currency items created by the 'Give Cash' Referee Macro",
   "SDM.SettingsCurrencyName": "Currency name",
