--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -544,6 +544,30 @@
   "SDM.ItemWard": "Resguardo",
   "SDM.Magitech": "Tecnomagia",
   "SDM.ManageHeroDice": "Ajustar Dados Heróicos",
+  "SDM.Menu.AudioGM.Hint": "",
+  "SDM.Menu.AudioGM.Label": "Configurar Áudio",
+  "SDM.Menu.AudioGM.Name": "Configurações de Áudio",
+  "SDM.Menu.Baselines.Hint": "",
+  "SDM.Menu.Baselines.Label": "Configurar Valores Base",
+  "SDM.Menu.Baselines.Name": "Configurações de Valores Base",
+  "SDM.Menu.Client.Hint": "Configurações específicas do usuário, como cor da interface e atalho Shift+Click",
+  "SDM.Menu.Client.Label": "Configurar Opções do Usuário",
+  "SDM.Menu.Client.Name": "Configurações do Usuário",
+  "SDM.Menu.Combat.Hint": "",
+  "SDM.Menu.Combat.Label": "Configurar Encontros",
+  "SDM.Menu.Combat.Name": "Configurações de Encontros",
+  "SDM.Menu.CoreRules.Hint": "",
+  "SDM.Menu.CoreRules.Label": "Configurar Regras Básicas",
+  "SDM.Menu.CoreRules.Name": "Configurações de Regras Básicas",
+  "SDM.Menu.Economy.Hint": "",
+  "SDM.Menu.Economy.Label": "Configurar Dinheiro",
+  "SDM.Menu.Economy.Name": "Configurações de Dinheiro",
+  "SDM.Menu.NPC.Hint": "",
+  "SDM.Menu.NPC.Label": "Configurar NPCs",
+  "SDM.Menu.NPC.Name": "Configurações Relacionadas a NPCs",
+  "SDM.Menu.Skills.Hint": "",
+  "SDM.Menu.Skills.Label": "Configurar Perícias",
+  "SDM.Menu.Skills.Name": "Configurações de Perícias",
   "SDM.MessageCritical": "Acerto crítico!",
   "SDM.MessageDamage": "Causa {damage} de dano!",
   "SDM.MessageNoChanges": "Nenhuma alteração necessária",
@@ -685,7 +709,7 @@
   "SDM.SettingsBaseTraitSlots": "Espaços de Traços Base",
   "SDM.SettingsBaseTraitSlotsHint": "Número base de espaços de inventário para traços",
   "SDM.SettingsChromatype": "Cromatipo",
-  "SDM.SettingsChromatypeHint": "Escolha seu cromatipo à luz do policromo! (altera a cor de destaque da interface)\nConfira no Dice So Nice: Configurações de Dados 3D para um tema \"SDM Chromatype Dice\"",
+  "SDM.SettingsChromatypeHint": "Escolha seu cromatipo à luz da interface policromática! (altera a cor de destaque da interface)\nConfira no Dice So Nice: Configurações de Dados 3D para um tema \"SDM Chromatype Dice\"",
   "SDM.SettingsCurrencyImg": "Imagem padrão para itens de dinheiro",
   "SDM.SettingsCurrencyImgHint": "Imagem padrão usada pelo macro de transferência de dinheiro",
   "SDM.SettingsCurrencyName": "Nome da moeda",
