feat: :sparkles: Add missing caravan field in active effects changes tab options

--- a/lang/en.json
+++ b/lang/en.json
@@ -351,6 +351,7 @@
   "SDM.EffectsLabel.system.base_damage_multiplier": "Starting damage multiplier value for critical hits",
   "SDM.EffectsLabel.system.burden_penalty_bonus": "Burden Pernalty (negative values to remove penalty)",
   "SDM.EffectsLabel.system.burden_slots_bonus": "Affects the number of burden slots",
+  "SDM.EffectsLabel.system.capacity": "Caravan carry capacity in sacks",
   "SDM.EffectsLabel.system.defense_bonus": "Physical defense bonus",
   "SDM.EffectsLabel.system.fantascience.bonus": "Fantascience attack bonus",
   "SDM.EffectsLabel.system.hero_dice.bonus": "Extra hero dice (increases the max number of hero dice)",
@@ -369,6 +370,7 @@
   "SDM.EffectsLabel.system.reaction_bonus": "Reaction Bonus",
   "SDM.EffectsLabel.system.small_item_slots_bonus": "Number small sized (sp) items that won't take items slots",
   "SDM.EffectsLabel.system.social_defense_bonus": "Social defense bonus",
+  "SDM.EffectsLabel.system.speed": "Caravan speed value (integer number ranging from -3 to 2)",
   "SDM.EffectsLabel.system.trait_slots_bonus": "Affects the number of trait slots",
   "SDM.EffectsLabel.system.ward_bonus": "Ward bonus (affects mental defense and all saving throw rolls)",
   "SDM.EffectsLabel.system.weapon_item_slots_bonus": "Number weapon items that won't take items slots",
