--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -351,6 +351,7 @@
   "SDM.EffectsLabel.system.base_damage_multiplier": "Valor inicial do multiplicador de dado para acertos críticos",
   "SDM.EffectsLabel.system.burden_penalty_bonus": "Penalidade por Fardos (números negativos para ignorar fardos)",
   "SDM.EffectsLabel.system.burden_slots_bonus": "Afeta o número de espaços para fardos",
+  "SDM.EffectsLabel.system.capacity": "Capacidade da Caravana em sacas",
   "SDM.EffectsLabel.system.defense_bonus": "Bônus de defesa física",
   "SDM.EffectsLabel.system.fantascience.bonus": "Bônus de ataque com fantasciência",
   "SDM.EffectsLabel.system.hero_dice.bonus": "Dados heróicos extras (aumenta o número máximo de dados heróicos)",
@@ -369,6 +370,7 @@
   "SDM.EffectsLabel.system.reaction_bonus": "Bônus de reação",
   "SDM.EffectsLabel.system.small_item_slots_bonus": "Número de itens pequenos (ct) que não ocupam espaços",
   "SDM.EffectsLabel.system.social_defense_bonus": "Bônus de defesa social",
+  "SDM.EffectsLabel.system.speed": "Velocidade da Caravana (número inteiro de -3 até 2)",
   "SDM.EffectsLabel.system.trait_slots_bonus": "Afeta o número de espaços para traços",
   "SDM.EffectsLabel.system.ward_bonus": "Bônus de proteção (afeta defesa mental e todas as rolagens de salvaguarda)",
   "SDM.EffectsLabel.system.weapon_item_slots_bonus": "Número de armas que não ocupam espaços",
