fix: :bug: Small i18n fixes

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -512,8 +512,8 @@
   "SDM.Item.Notched": "Marcar como Danificado",
   "SDM.Item.Recharge": "Recarregar",
   "SDM.Item.Repair": "Reparar",
-  "SDM.Item.RunningLow": "Marcar recursos como Acabando",
-  "SDM.Item.RunOut": "Marcar recursos como Esgotado",
+  "SDM.Item.RunningLow": "Marcar como Acabando",
+  "SDM.Item.RunOut": "Marcar como Esgotado",
   "SDM.Item.Share": "Compartilhar",
   "SDM.Item.Unpack": "Desempacotar Item",
   "SDM.Item.View": "Visualizar",
