feat: :sparkles: Bump system version

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,7 @@
   "SDM.AbilityThoAbbr": "tho",
   "SDM.AllCharacters": "All Characters",
   "SDM.Amount": "Amount",
+  "SDM.AnimalSupplies": "Animal Supplies",
   "SDM.ArmorType": "Type",
   "SDM.ArmorTypeGolem": "golem",
   "SDM.ArmorTypeHeavy": "heavy",
@@ -43,6 +44,7 @@
   "SDM.AttackRanged": "Ranged",
   "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Attack Type",
+  "SDM.Available": "Available",
   "SDM.BackgroundCancel": "Cancel",
   "SDM.BackgroundConfirm": "Create Background",
   "SDM.BackgroundEditablePreview": "Background Editable Preview",
@@ -281,6 +283,7 @@
   "SDM.CashManagementRemoveMoney": "Charge Money",
   "SDM.CashSymbol": "€",
   "SDM.Cast": "Cast",
+  "SDM.ChargeForThisTransfer": "Should Charge",
   "SDM.ChatContextDamage": "Apply as Damage",
   "SDM.ChatContextHealing": "Apply as Healing",
   "SDM.ColorAqua": "Aqua",
@@ -305,6 +308,8 @@
   "SDM.ColorWhite": "White",
   "SDM.ColorYellow": "Yellow",
   "SDM.CombatantsExcluded": "Excluded from combat: {names}",
+  "SDM.ConsumeSupply": "Consume Supplies",
+  "SDM.ConsumeSupplyHint": "Weekly Required Supplies",
   "SDM.Cost": "Cost",
   "SDM.CreateNPC": "Create NPC",
   "SDM.CreatePowerItem": "Create Power as",
@@ -501,20 +506,25 @@
   "SDM.HeroDiceSpend": "{actor} spent {quantity} {diceLabel}",
   "SDM.HeroDie": "hero die",
   "SDM.humans-of-the-pananthropy": " Humans of the Pananthropy",
+  "SDM.HumanSupplies": "Human Supplies",
   "SDM.Increment": "Increase by 1",
   "SDM.Initiative": "Initiative",
   "SDM.InventoryBurdens": "Burdens",
   "SDM.InventoryItems": "Items",
   "SDM.InventoryTraits": "Traits",
   "SDM.Issues": "Issues",
+  "SDM.IsSupply": "Is Supply",
   "SDM.Item.Broken": "Mark as Broken",
+  "SDM.Item.ConsumeSupply": "Consume Supply",
   "SDM.Item.Delete": "Delete",
+  "SDM.Item.MergeItems": "Merge Items",
   "SDM.Item.Notched": "Mark as Notched",
   "SDM.Item.Recharge": "Recharge",
   "SDM.Item.Repair": "Repair",
   "SDM.Item.RunningLow": "Mark as Running Low",
   "SDM.Item.RunOut": "Mark as Run Out",
   "SDM.Item.Share": "Share",
+  "SDM.Item.SplitItems": "Split Items",
   "SDM.Item.Unpack": "Unpack Item",
   "SDM.Item.View": "View",
   "SDM.ItemArmor": "Armor",
@@ -544,6 +554,7 @@
   "SDM.ItemToggleReadied": "Toggle Readied Status",
   "SDM.ItemTraitType": "Trait Type",
   "SDM.ItemWard": "Ward",
+  "SDM.MachineSupplies": "Machine Supplies",
   "SDM.Magitech": "Magitech",
   "SDM.ManageHeroDice": "Adjust Hero Dice",
   "SDM.Menu.AudioGM.Hint": "",
@@ -581,6 +592,7 @@
   "SDM.MoraleOverOutcomeMessage": "The NPC breaks: flees, retreats, surrenders or ends combat in some other way. The better trained, the steadier the withdrawal.",
   "SDM.MoraleUnderOutcome": "Under Morale",
   "SDM.MoraleUnderOutcomeMessage": "The NPC continues to struggle, grimly determined, resolute for now.",
+  "SDM.NewStackGets": "New Stack Gets",
   "SDM.NoPowers": "Empty Power Album. Add powers by dragging and dropping a Power gear, or by clicking +New Power",
   "SDM.NormalItemAction": "<b>left-click</b>: mark item as notched",
   "SDM.NotchedItemAction": "<b>left-click</b>: mark item as broken<br><b>right-click</b>: repair item",
@@ -620,6 +632,7 @@
   "SDM.NpcXp": "XP",
   "SDM.OneHanded": "One-Handed",
   "SDM.OptionalField": "{field} (optional)",
+  "SDM.OriginalKeeps": "Original Stack Keeps",
   "SDM.OriginalRoll": "Original roll",
   "SDM.Power": "Power",
   "SDM.PowerAlbum": "Album of Power",
@@ -779,11 +792,19 @@
   "SDM.SpeedVeryFast": "Very Fast (+2)",
   "SDM.SpeedVerySlow": "Very Slow (-2)",
   "SDM.SpeedVeryVerySlow": "Very Very Slow (-3)",
+  "SDM.Split": "Split",
+  "SDM.SplitHint": "Drag the slider or type a number. Totals must add up to the original quantity.",
+  "SDM.SplitStackIntoTwo": "Split x{quantity} {item} Stack Into Two",
+  "SDM.SplitStackTitle": "Split Stack: {item}",
   "SDM.StatusBlind": "blind",
   "SDM.StatusEncumbered": "encumbered",
   "SDM.StatusOverloaded": "overloaded",
   "SDM.StatusSlow": "slow",
   "SDM.Success": "Success",
+  "SDM.SupplyType": "Supply Type",
+  "SDM.SupplyTypeAnimal": "animal",
+  "SDM.SupplyTypeHuman": "human",
+  "SDM.SupplyTypeMachine": "machine",
   "SDM.TabBiography": "Biography",
   "SDM.TabCaravanInventory": "Cargo",
   "SDM.TabCaravanNotes": "Missions & Goals",
@@ -802,6 +823,7 @@
   "SDM.TabTransport": "Beasts & Vehicles",
   "SDM.Target": "Target",
   "SDM.Total": "total",
+  "SDM.TotalToCharge": "Total to Charge",
   "SDM.Transfer": "Transfer {type}",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferComplete": "Transfer completed successfully",
@@ -817,6 +839,7 @@
   "SDM.Unit.soaps.abbr": "sp",
   "SDM.Unit.stones.abbr": "st",
   "SDM.UnitCash": "cash",
+  "SDM.UnitPrice": "Unit Price",
   "SDM.UnitSack": "sack",
   "SDM.UnitSacks": "sacks",
   "SDM.UnitSacksAbbr": "sk",
