--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -26,6 +26,7 @@
   "SDM.AbilityThoAbbr": "int",
   "SDM.AllCharacters": "Todos os Personagens",
   "SDM.Amount": "Quantidade",
+  "SDM.AnimalSupplies": "Suprimento para Animais",
   "SDM.ArmorType": "Tipo",
   "SDM.ArmorTypeGolem": "golem",
   "SDM.ArmorTypeHeavy": "pesada",
@@ -43,6 +44,7 @@
   "SDM.AttackRanged": "À Distância",
   "SDM.AttackSocial": "social",
   "SDM.AttackTarget": "Tipo de Ataque",
+  "SDM.Available": "Disponível",
   "SDM.BackgroundCancel": "Cancelar",
   "SDM.BackgroundConfirm": "Criar Antecedente",
   "SDM.BackgroundEditablePreview": "Prévia Editável do Antecedente",
@@ -281,6 +283,7 @@
   "SDM.CashManagementRemoveMoney": "Remover Dinheiro",
   "SDM.CashSymbol": "€",
   "SDM.Cast": "Conjurar",
+  "SDM.ChargeForThisTransfer": "Deve Cobrar",
   "SDM.ChatContextDamage": "Aplicar como Dano",
   "SDM.ChatContextHealing": "Aplicar como Cura",
   "SDM.ColorAqua": "Água",
@@ -305,6 +308,8 @@
   "SDM.ColorWhite": "Branco",
   "SDM.ColorYellow": "Amarelo",
   "SDM.CombatantsExcluded": "Excluídos do combate: {names}",
+  "SDM.ConsumeSupply": "Consumir Suprimentos",
+  "SDM.ConsumeSupplyHint": "Suprimentos Semanais Requeridos",
   "SDM.Cost": "Custo",
   "SDM.CreateNPC": "Criar NPC",
   "SDM.CreatePowerItem": "Criar Poder como",
@@ -501,20 +506,25 @@
   "SDM.HeroDiceSpend": "{actor} gastou {quantity} {diceLabel}",
   "SDM.HeroDie": "dado heróico",
   "SDM.humans-of-the-pananthropy": "Humanos da Panantrópia",
+  "SDM.HumanSupplies": "Suprimentos para Humanos",
   "SDM.Increment": "Aumentar em 1",
   "SDM.Initiative": "Iniciativa",
   "SDM.InventoryBurdens": "Fardos",
   "SDM.InventoryItems": "Itens",
   "SDM.InventoryTraits": "Traços",
   "SDM.Issues": "Problemas",
+  "SDM.IsSupply": "É Suprimento",
   "SDM.Item.Broken": "Marcar como Quebrado",
+  "SDM.Item.ConsumeSupply": "Consumir Suprimento",
   "SDM.Item.Delete": "Excluir",
+  "SDM.Item.MergeItems": "Juntar Itens",
   "SDM.Item.Notched": "Marcar como Danificado",
   "SDM.Item.Recharge": "Recarregar",
   "SDM.Item.Repair": "Reparar",
   "SDM.Item.RunningLow": "Marcar como Acabando",
   "SDM.Item.RunOut": "Marcar como Esgotado",
   "SDM.Item.Share": "Compartilhar",
+  "SDM.Item.SplitItems": "Separar Itens",
   "SDM.Item.Unpack": "Desempacotar Item",
   "SDM.Item.View": "Visualizar",
   "SDM.ItemArmor": "Armadura",
@@ -544,6 +554,7 @@
   "SDM.ItemToggleReadied": "Muda Estado Equipado",
   "SDM.ItemTraitType": "Tipo de Traço",
   "SDM.ItemWard": "Resguardo",
+  "SDM.MachineSupplies": "Suprimentos para Máquinas",
   "SDM.Magitech": "Tecnomagia",
   "SDM.ManageHeroDice": "Ajustar Dados Heróicos",
   "SDM.Menu.AudioGM.Hint": "",
@@ -581,6 +592,7 @@
   "SDM.MoraleOverOutcomeMessage": "O NPC entra em colapso: foge, recua, rende-se ou encerra o combate de outra forma. Quanto melhor treinado, mais organizada será a retirada.",
   "SDM.MoraleUnderOutcome": "Abaixo do Moral",
   "SDM.MoraleUnderOutcomeMessage": "O NPC continua lutando, com determinação sombria, resoluto por enquanto.",
+  "SDM.NewStackGets": "Nova Parte Fica com",
   "SDM.NoPowers": "Álbum de Poderes Vazio. Adicione poderes arrastando e soltando equipamentos de Poder, ou clicando em +Novo Poder",
   "SDM.NormalItemAction": "<b>clique-esquerdo</b>: marca item como danificado",
   "SDM.NotchedItemAction": "<b>clique-esquerdo</b>: marca item como quebrado<br><b>clique-direito</b>: repara item",
@@ -620,6 +632,7 @@
   "SDM.NpcXp": "EXP",
   "SDM.OneHanded": "Uma mão",
   "SDM.OptionalField": "{field} (opcional)",
+  "SDM.OriginalKeeps": "Parte Original Mantêm",
   "SDM.OriginalRoll": "Rolagem original",
   "SDM.Power": "Poder",
   "SDM.PowerAlbum": "Álbum de Poderes",
@@ -779,11 +792,19 @@
   "SDM.SpeedVeryFast": "Muito Rápido",
   "SDM.SpeedVerySlow": "Muito Lento",
   "SDM.SpeedVeryVerySlow": "Muito Muito Lento",
+  "SDM.Split": "Separar",
+  "SDM.SplitHint": "Arraste o slider ou digite um número. Os totais devem somar a quantidade original.\n",
+  "SDM.SplitStackIntoTwo": "Separar x{quantity} {item} em Duas Partes",
+  "SDM.SplitStackTitle": "Separar Itens: {item}",
   "SDM.StatusBlind": "cego",
   "SDM.StatusEncumbered": "sobrecarregado",
   "SDM.StatusOverloaded": "sobrecarregado",
   "SDM.StatusSlow": "lento",
   "SDM.Success": "Sucesso",
+  "SDM.SupplyType": "Tipo de Suprimento",
+  "SDM.SupplyTypeAnimal": "animal",
+  "SDM.SupplyTypeHuman": "humano",
+  "SDM.SupplyTypeMachine": "máquina",
   "SDM.TabBiography": "Biografia",
   "SDM.TabCaravanInventory": "Carga",
   "SDM.TabCaravanNotes": "Missões e Objetivos",
@@ -802,6 +823,7 @@
   "SDM.TabTransport": "Montarias & Motores",
   "SDM.Target": "Alvo",
   "SDM.Total": "total",
+  "SDM.TotalToCharge": "Total Cobrado",
   "SDM.Transfer": "Transferir {type}",
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferComplete": "Transferência realizada com sucesso",
@@ -817,6 +839,7 @@
   "SDM.Unit.soaps.abbr": "crt",
   "SDM.Unit.stones.abbr": "mo",
   "SDM.UnitCash": "dinheiro",
+  "SDM.UnitPrice": "Preço Unitário",
   "SDM.UnitSack": "saca",
   "SDM.UnitSacks": "sacas",
   "SDM.UnitSacksAbbr": "sc",
