feat: :sparkles: Add support to token action hud module

--- a/lang/en.json
+++ b/lang/en.json
@@ -431,6 +431,7 @@
   "SDM.FieldAbilitiesPl": "Abilities",
   "SDM.FieldAgent": "Agent (Fee)",
   "SDM.FieldArmor": "Armor",
+  "SDM.FieldAttackPl": "Attacks",
   "SDM.FieldBiography": "Biography",
   "SDM.FieldBonus": "Bonus",
   "SDM.FieldCapacity": "Capacity",
@@ -464,6 +465,7 @@
   "SDM.FieldMentalDefense": "Mental Defense",
   "SDM.FieldMotto": "Motto",
   "SDM.FieldName": "Name",
+  "SDM.FieldOther": "Other",
   "SDM.FieldPhysicalDefense": "Physical Defense",
   "SDM.FieldPlayerXP": "Player xp",
   "SDM.FieldPlayerXPTitle": "Player Experience",
@@ -471,6 +473,7 @@
   "SDM.FieldRevenue": "Revenue",
   "SDM.FieldRisk": "risk",
   "SDM.FieldRunName": "Run Name",
+  "SDM.FieldSavePl": "Saves",
   "SDM.FieldSaveTarget": "Save",
   "SDM.FieldSkills": "Skills",
   "SDM.FieldSocialDefense": "Social Defense",
