--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -431,6 +431,7 @@
   "SDM.FieldAbilitiesPl": "Atributos",
   "SDM.FieldAgent": "Agente (Taxa)",
   "SDM.FieldArmor": "Armadura",
+  "SDM.FieldAttackPl": "Ataques",
   "SDM.FieldBiography": "Biografia",
   "SDM.FieldBonus": "Bônus",
   "SDM.FieldCapacity": "Capacidade",
@@ -464,6 +465,7 @@
   "SDM.FieldMentalDefense": "Defesa Mental",
   "SDM.FieldMotto": "Lema",
   "SDM.FieldName": "Nome",
+  "SDM.FieldOther": "Outros",
   "SDM.FieldPhysicalDefense": "Defesa Física",
   "SDM.FieldPlayerXP": "XP Jogador",
   "SDM.FieldPlayerXPTitle": "Experiência do Jogador",
@@ -471,6 +473,7 @@
   "SDM.FieldRevenue": "Renda",
   "SDM.FieldRisk": "risco",
   "SDM.FieldRunName": "Nome da Rota",
+  "SDM.FieldSavePl": "Salvaguardas",
   "SDM.FieldSaveTarget": "Salvaguarda",
   "SDM.FieldSkills": "Perícias",
   "SDM.FieldSocialDefense": "Defesa Social",
