feat: :sparkles: Add transfer history card to chat

--- a/lang/en.json
+++ b/lang/en.json
@@ -826,14 +826,17 @@
   "SDM.TabTransport": "Beasts & Vehicles",
   "SDM.Target": "Target",
   "SDM.Total": "total",
+  "SDM.TotalCharged": "Total Charged",
   "SDM.TotalToCharge": "Total to Charge",
-  "SDM.Transfer": "Transfer {type}",
+  "SDM.Transfer": "{type} Transfer",
   "SDM.TransferCashComplete": "Transferred {amount} cash to {target}",
   "SDM.TransferComplete": "Transfer completed successfully",
   "SDM.TransferFailed": "Transfer failed: {error}",
   "SDM.TransferFailedGeneric": "Transfer failed unexpectedly",
+  "SDM.TransferItem": "Transfer: {type}",
   "SDM.TransferItemComplete": "{item} transferred to {target}",
   "SDM.TransferReceived": "You received {item} from {source}",
+  "SDM.Transferred": "Transferred",
   "SDM.TransferRequestSent": "Transfer request sent",
   "SDM.TransferTo": "To",
   "SDM.Transport": "Transport",
