--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -826,14 +826,17 @@
   "SDM.TabTransport": "Montarias & Motores",
   "SDM.Target": "Alvo",
   "SDM.Total": "total",
+  "SDM.TotalCharged": "Total Cobrado",
   "SDM.TotalToCharge": "Total Cobrado",
   "SDM.Transfer": "Transferir {type}",
   "SDM.TransferCashComplete": "Transferidos {amount} em dinheiro para {target}",
   "SDM.TransferComplete": "Transferência realizada com sucesso",
   "SDM.TransferFailed": "Falha na transferência: {error}",
   "SDM.TransferFailedGeneric": "Transferência falhou inesperadamente",
+  "SDM.TransferItem": "Transferir: {type}",
   "SDM.TransferItemComplete": "{item} transferido para {target}",
   "SDM.TransferReceived": "Você recebeu {item} de {source}",
+  "SDM.Transferred": "Transferido",
   "SDM.TransferRequestSent": "Pedido de transferência enviado",
   "SDM.TransferTo": "Para",
   "SDM.Transport": "Transporte",
